--- a/content/style.css
+++ b/content/style.css
@@ -40,3 +40,16 @@ footer {
   display: block;
   margin-bottom: 2rem;
 }
+
+h3 {
+  margin-bottom: 20px;
+}
+
+.opportunities ul{
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+.opportunities li{
+  list-style: none;
+}
