--- a/content/style.css
+++ b/content/style.css
@@ -19,12 +19,12 @@ html {
 
 main {
   background-color: bisque;
-  padding: 20px;
+  padding: 2rem;
 }
 
 nav {
   background-color: aquamarine;
-  padding: 20px;
+  padding: 2rem;
 }
 
 nav ul {
@@ -33,7 +33,7 @@ nav ul {
 
 footer {
   background-color: lightblue;
-  padding: 20px;
+  padding: 2rem;
 }
 
 .blurb {
@@ -41,15 +41,20 @@ footer {
   margin-bottom: 2rem;
 }
 
-h3 {
-  margin-bottom: 20px;
+.all_opps ul{
+  list-style: none;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.opportunities ul{
+.all_opps li{
   list-style: none;
-  margin-bottom: 30px;
 }
 
-.opportunities li{
-  list-style: none;
+.one_opp ul{
+  margin-bottom: 2rem;
+}
+
+.one_opp li{
+  background-color: darkorange;
 }
