Rough in coloring spacing and typography. Add nav to footer.

--- a/content/style.css
+++ b/content/style.css
@@ -35,15 +35,10 @@
   font-style: italic;
 }
 
-
-
-*,
-*:after,
-*:before {
-  margin: 0;
-  padding: 0;
-  /* true sizing including padding */
+* {
+  /* true sizing*/
   box-sizing: border-box;
+  margin: auto;
 }
 
 html {
@@ -56,21 +51,25 @@ html {
 }
 
 body {
-  background-color: white;
+  background-color: #282A36;
   margin: auto;
+  color: white;
+  display: block;
 }
 
 h1 {
-  /* color: #f2f2f2; */
-  font-size: 2em;
+  font-size: 3em;
   font-family: "Nunito Sans", sans-serif;
+  color: white;
 }
 
 h2 {
   margin-bottom: 10px;
-  font-size: 1.8em;
+  font-size: 1.6em;
   font-family: "Nunito Sans", sans-serif;
+  text-decoration: none;
 }
+
 
 h3 {
   margin-block-start: 0;
@@ -80,7 +79,7 @@ h3 {
 }
 
 p {
-  color: black;
+  color: white;
   line-height: 1.4;
   font-size: 1.1em;
   font-family: "Atkinson Hyperlegible", sans-serif;
@@ -90,15 +89,35 @@ ul {
   line-height: 1.4;
 }
 
+/* unvisited link */
+a:link {
+  color: #D196E6;
+  text-decoration-line: none;
+}
 
-main {
-  /* background-color: bisque;
-  padding: 2rem; */
+/* visited link */
+a:visited {
+  color: #D196E6;
+  text-decoration-line: none;
+}
+
+/* mouse over link */
+a:hover {
+  text-decoration-line: underline;
+}
+
+/* selected link */
+a:active {
+  color: #D196E6;
 }
 
 nav {
   background-color: gainsboro;
   padding: 2rem;
+}
+
+.navigation a:link {
+  text-decoration-line: none;
 }
 
 nav ul {
@@ -124,20 +143,25 @@ footer {
   margin-bottom: 2rem;
 }
 
-.opportunities-list ul{
+.opportunities-list ul {
   list-style: none;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.opportunities li{
+.opportunities li {
   list-style: none;
 }
 
-.opportunity ul{
+.opportunity {
   margin-bottom: 2rem;
 }
 
-.opportunity li{
-  background-color: lightgoldenrodyellow;
+.description {
+  margin-bottom: 1em;
+}
+
+.due-date {
+  color: lightgray;
+  font-size: 1em;
 }
