Style the due date

--- a/content/style.css
+++ b/content/style.css
@@ -1,46 +1,3 @@
-/* <uniquifier>: Use a unique and descriptive class name
-<weight>: Use a value from 200 to 1000 */
-
-.nunito-sans-headers {
-  font-family: "Nunito Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100,
-    "YTLC" 500;
-}
-
-.atkinson-hyperlegible-regular {
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.atkinson-hyperlegible-bold {
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.atkinson-hyperlegible-regular-italic {
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.atkinson-hyperlegible-bold-italic {
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.metrophobic-regular {
-  font-family: "Metrophobic", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
 * {
   /* true sizing*/
   box-sizing: border-box;
@@ -230,7 +187,10 @@ footer {
 }
 
 .due-date {
+  font-family: "B612 Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
   color: lightgray;
-  font-size: .9em;
-  letter-spacing: 2px;
+  font-size: .8em;
+  letter-spacing: 1px;
 }
