--- a/content/style.css
+++ b/content/style.css
@@ -28,60 +28,6 @@ body {
   color: white;
 }
 
-
-/* Extra small devices (iPhone SE, Pixel 7, Surface Duo, Samsung Galaxy A51/71, Galaxy Z Fold, phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .page {
-    /* background: #bada55; */
-    max-width: 320px;
-    margin: auto;
-  }
-
-}
-
-/* Small devices (Landscape iPhone SE, portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .page {
-    /* background: darkorange; */
-    max-width: 600px;
-    margin: auto;
-  }
-}
-
-
-/* Medium devices (iPad Air, iPad Mini, Surface Pro 7, Asus Zenbook Fold, landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .page {
-    /* background: darkolivegreen; */
-    max-width: 672px;
-    margin: auto;
-  }
-}
-
-
-/* Large devices (iPad Pro, laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .page {
-    /* background: darkmagenta; */
-    max-width: 960px;
-    margin: auto;
-  }
-}
-
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .page {
-    /* background: darkslateblue; */
-    width: 1024px;
-    margin: 0 auto;
-  }
-
-}
-
-
-/* All devices */
-
 h1 {
   font-size: 2.4em;
   font-family: "Nunito Sans", sans-serif;
@@ -96,11 +42,17 @@ h2 {
   text-decoration: none;
 }
 
-
 h3 {
   margin-block-start: 0;
   margin-block-end: 0;
   font-size: 1.4em;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+h4 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  font-size: 1.2em;
   font-family: "Nunito Sans", sans-serif;
 }
 
@@ -115,24 +67,20 @@ ul {
   line-height: 1.4;
 }
 
-/* unvisited link */
 a:link {
   color: var(--primary-purple);
   text-decoration-line: none;
 }
 
-/* visited link */
 a:visited {
   color: var(--primary-purple);
   text-decoration-line: none;
 }
 
-/* mouse over link */
 a:hover {
   text-decoration-line: underline;
 }
 
-/* selected link */
 a:active {
   color: var(--primary-purple);
 }
@@ -152,6 +100,11 @@ nav ul {
 }
 
 footer {
+}
+
+.post-image img {
+  width: 100%; /* Ensure the image scales down */
+  height: auto; /* Maintain aspect ratio */
 }
 
 .logo-img {
@@ -184,8 +137,8 @@ footer {
   grid-template-columns: 1fr 1fr;
   /* grid-template-areas: "opportunity opportunity"; */
   /* grid-auto-flow: row; */
-  
 } 
+
 .opportunity {
   grid-auto-flow: row;
   text-decoration: none;
@@ -203,10 +156,6 @@ footer {
   margin-bottom: 1em;
 }
 
-.post-image {
-  width: 100%;
-  max-width: 320px;
-}
 
 .post {
   margin-bottom: 3em;
@@ -225,17 +174,17 @@ footer {
 .button {
   display: inline-block;
   padding: 8px 12px;
-  font-size: 12px; /* Make text smaller */
+  font-size: 12px;
   background-color: var(--button-background);
   color: var(--primary-purple);
   border: none;
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase; /* Make text all caps */
+  text-transform: uppercase; 
   transition: background-color 0.3s ease, transform 0.3s ease;
-  line-height: normal; /* Ensure line-height does not affect button height */
-  letter-spacing: 1px; /* Ensure line-height does not affect button height */
+  line-height: normal; 
+  letter-spacing: 1px; 
 }
 
 .button:hover {
@@ -253,4 +202,88 @@ footer {
   font-weight: 400;
   font-size: .9em;
   margin-bottom: 2rem;
+}
+
+
+
+/* Extra small devices (iPhone SE, Pixel 7, Surface Duo, Samsung Galaxy A51/71, Galaxy Z Fold, phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .page {
+    /* background: #bada55; */
+    max-width: 320px;
+    margin: auto;
+  }
+
+  .opportunities {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-areas: "opportunity"; */
+    /* grid-auto-flow: row; */
+  } 
+
+  .post-image {
+    width: 100%;
+    max-width: 400px;
+  }
+
+}
+
+/* Small devices (Landscape iPhone SE, portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .page {
+    /* background: darkorange; */
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .post-image {
+    width: 100%;
+    max-width: 300px;
+  }
+}
+
+
+/* Medium devices (iPad Air, iPad Mini, Surface Pro 7, Asus Zenbook Fold, landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .page {
+    /* background: darkolivegreen; */
+    max-width: 672px;
+    margin: auto;
+  }
+
+  .post-image {
+    width: 100%;
+    max-width: 320px;
+  }
+}
+
+
+/* Large devices (iPad Pro, laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .page {
+    /* background: darkmagenta; */
+    max-width: 960px;
+    margin: auto;
+  }
+
+  .post-image {
+    width: 100%;
+    max-width: 320px;
+  }
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .page {
+    /* background: darkslateblue; */
+    width: 1024px;
+    margin: 0 auto;
+  }
+
+  .post-image {
+    width: 100%;
+    max-width: 480px;
+  }
+
 }
