--- a/content/style.css
+++ b/content/style.css
@@ -87,19 +87,19 @@ a:active {
 
 .navigation {
   grid-area: navigation;
-  display: grid; /* Use CSS Grid for layout */
-  grid-template-columns: repeat(auto-fit, minmax(100px, auto)); /* Create columns for each nav item */
-  justify-content: right; /* Center the navigation items horizontally */
-  align-items: center; /* Center the navigation items vertically */
-  padding: 10px; /* Optional: Add padding */
+  display: grid; 
+  grid-template-columns: repeat(auto-fit, minmax(100px, auto));
+  justify-content: right;
+  align-items: center;
+  padding: 10px;
 }
 
 .navigation a:link,
 .navigation a:visited {
-text-decoration: none; /* Remove underline */
+text-decoration: none;
 color: var(--primary-purple);
-padding: 10px 15px; /* Add padding to links */
-display: block; /* Ensure the links take up the full height of the nav item */
+padding: 10px 15px;
+display: block;
 }
 
 .navigation a:hover,
@@ -112,9 +112,9 @@ list-style-type: none;
 font-family: "Nunito Sans", sans-serif;
 text-transform: capitalize;
 display: flex; /* Use Flexbox for horizontal layout */
-justify-content: flex-end; /* Right-justify the navigation items */
-margin: 0; /* Remove default margin */
-padding: 0; /* Remove default padding */
+justify-content: flex-end;
+margin: 0; 
+padding: 0;
 }
 
 nav ul li {
@@ -122,7 +122,6 @@ display: flex; /* Use Flexbox to center the content */
 justify-content: center; /* Center the content horizontally */
 align-items: center; /* Center the content vertically */
 }
-
 
 footer {
 }
@@ -160,8 +159,6 @@ footer {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr 1fr;
-  /* grid-template-areas: "opportunity opportunity"; */
-  /* grid-auto-flow: row; */
 } 
 
 .opportunity {
@@ -242,8 +239,6 @@ footer {
   .opportunities {
     display: grid;
     grid-template-columns: 1fr;
-    /* grid-template-areas: "opportunity"; */
-    /* grid-auto-flow: row; */
   } 
 
   .post-image {
