--- a/content/style.css
+++ b/content/style.css
@@ -67,7 +67,7 @@ h4 {
 
 p {
   color: white;
-  line-height: 1.4;
+  line-height: 1.2;
   font-size: 1.1em;
   font-family: "Atkinson Hyperlegible", sans-serif;
 }
@@ -350,7 +350,7 @@ a:hover {
 
   .post-image {
     width: 100%;
-    max-width: 400px;
+    /* max-width: 400px; */
   }
 
 }
@@ -365,7 +365,7 @@ a:hover {
 
   .post-image {
     width: 100%;
-    max-width: 300px;
+    /* max-width: 320px; */
   }
 }
 
@@ -380,7 +380,7 @@ a:hover {
 
   .post-image {
     width: 100%;
-    max-width: 320px;
+    /* max-width: 320px; */
   }
 }
 
@@ -395,7 +395,7 @@ a:hover {
 
   .post-image {
     width: 100%;
-    max-width: 320px;
+    /* max-width: 320px; */
   }
 }
 
@@ -410,7 +410,7 @@ a:hover {
 
   .post-image {
     width: 100%;
-    max-width: 480px;
+    /* max-width: 480px; */
   }
   
 }
