--- a/content/style.css
+++ b/content/style.css
@@ -8,7 +8,7 @@
   --primary-purple: #d9a7eb;
   --electric-green: #50FA7B;
   --background-blue: #282A36;
-  --promo-background: #333544;
+  --promo-background: rgba(217, 167, 235, 0.05);
   --button-background: rgba(217, 167, 235, 0.2);
   --date-background: rgba(255, 255, 255, 0.1);
   --date-text: rgba(255, 255, 255, 0.8);
@@ -254,7 +254,7 @@ display: block;
 }
 
 .post {
-  margin-bottom: 3em;
+  margin-bottom: 1em;
 }
 
 .category {
@@ -312,9 +312,9 @@ display: block;
 
 .promo {
   background-color: var(--promo-background);
-  padding: 16px 8px;
-  border-radius: 10px;
-  margin: 32px auto 48px auto; /* Center the div horizontally */
+  padding: 1rem .5rem;
+  border-radius: 20px;
+  margin: 2rem auto 3rem auto; /* Center the div horizontally */
   text-align: center;
   max-width: 420px; /* Set the maximum width */
 }
@@ -368,8 +368,7 @@ a:hover {
   justify-content: center; /* Center buttons */
   align-items: center;
   gap: 2rem; /* Space between buttons */
-  padding: 2rem 0;
-  margin: 2rem 0;
+  margin: 2rem 0 1rem 0;
 }
 
 .pagination .next,
