--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,6 +398,7 @@ a:hover {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 1rem;
 } 
 
 .human {
@@ -548,7 +549,7 @@ a:hover {
     line-height: 1.2;
   }
   h2 { 
-    font-size: 1.44rem;
+    font-size: 1.728rem;
     line-height: 1.3;
   }
   h3 { 
@@ -594,11 +595,11 @@ a:hover {
     line-height: 1.1;
   }
   h3 { 
-    font-size: 1.728rem;
+    font-size: 1.44rem;
     line-height: 1.4;
   }
   h4 { 
-    font-size: 1.44rem;
+    font-size: 1.2rem;
     line-height: 1.4;
   }
   p { 
