--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,11 @@ line-height: 2rem;
     /* max-width: 400px; */
   }
 
+  .footer-navigation {
+    display: grid;
+    grid-template-columns: 1fr;
+  } 
+
 }
 
 /* Small devices (Landscape iPhone SE, portrait tablets and large phones, 600px and up) */
@@ -553,6 +558,12 @@ line-height: 2rem;
     width: 100%;
     height: auto;
   }
+
+  .footer-navigation {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+  } 
 }
 
 
