--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,9 +56,8 @@ h2 {
   text-decoration: none;
   line-height: 1.1;
   margin-bottom: 0.8rem;
-  color: var(--white);
-
 }
+
 
 .post a:hover {
   text-decoration: none;
@@ -70,12 +69,6 @@ h3 {
   font-size: 1.44rem;  /* 31px */
   line-height: 1.3;
   margin-bottom: 0.6rem;
-  color: var(--white);
-}
-
-h3 a {
-  color: var(--white);
-  text-decoration-line: none;
 }
 
 h4 {
@@ -98,14 +91,14 @@ ul {
 }
 
 a:link {
-  text-decoration-line: none;
-  color: var(--primary-purple);
-}
-
-/* a:visited {
   color: var(--white);
   text-decoration-line: none;
-} */
+}
+
+a:visited {
+  color: var(--white);
+  text-decoration-line: none;
+}
 
 a:hover {
   text-decoration-line: underline;
@@ -219,8 +212,8 @@ align-items: center;
 
 .footer-navigation a:link,
 .footer-navigation a:visited {
-text-decoration: none;
-display: block;
+  text-decoration: none;
+  display: block;
 }
 
 .footer-nav-block {
@@ -422,11 +415,6 @@ a.category:hover {
   margin: 2rem auto 2rem auto; /* Center the div horizontally */
   text-align: center;
   max-width: 420px; /* Set the maximum width */
-}
-
-.promo a {
-  color: var(--white);
-  /* text-decoration-line: none; */
 }
 
 /* Opportunities Pagination */
